--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -5,6 +5,7 @@ html
         link(rel="stylesheet", href="vendor/bootstrap/dist/css/bootstrap.css")
         link(rel="stylesheet", href="vendor/fontawesome/css/font-awesome.css")
         link(rel="stylesheet", href="css/style.css")
+        link(rel="stylesheet", href="css/site.css")
     body(ng-app="app")
         block main-content
         script(type="text/javascript", src="vendor/jquery/dist/jquery.js")
@@ -13,3 +14,5 @@ html
         script(type="text/javascript", src="vendor/angular-route/angular-route.js")
         script(type="text/javascript", src="vendor/angular-resource/angular-resource.js")
         script(type="text/javascript", src="app/app.js")
+        script(type="text/javascript", src="app/main/mainCtrl.js")
+        script(type="text/javascript", src="app/myImages/myImagesCtrl.js")
