--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -9,19 +9,16 @@ block main-content
                     span(class="icon-bar")
                     span(class="icon-bar")
                     span(class="icon-bar")
-                a(class="navbar-brand" href="index.html" style="font-weight: 700;font-size: 24px;") img2net
+                a(class="navbar-brand" href="/" style="font-weight: 700;font-size: 24px;") img2net
                     span(style="font-size: 13px;vertical-align: middle;font-weight: normal;margin-left:6px;") - instant image sharing tool
             div(class="navbar-collapse collapse navbar-right")
                 ul(class="nav navbar-nav")
-                    //li
-                    //    a(href="#" style="padding-right: 10px;") MY CLIPPINGS
-                    //        span(class="badge badge-theme pull-right" style="margin-left: 5px") 9
-                    li(class="active")
-                        a(href="#/login" class="btn btn-theme") Login
                     li
-                        a(href="#/signup" class="btn btn-theme") Sign Up
+                        a(href="#/login" class="btn btn-theme btn-nav") Login
                     li
-                        a(href="#/myimages" class="btn btn-theme") My Images
+                        a(href="#/signup" class="btn btn-theme btn-nav") Sign Up
+                    li
+                        a(href="#/myimages" class="btn btn-theme btn-nav") My Images
     div(ng-view)
     div(id="footerwrap")
         div(class="container")
