--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -8,11 +8,15 @@ html
         link(rel="stylesheet", href="css/site.css")
     body(ng-app="app")
         block main-content
+        //vendor
         script(type="text/javascript", src="vendor/jquery/dist/jquery.js")
         script(type="text/javascript", src="vendor/bootstrap/dist/js/bootstrap.js")
         script(type="text/javascript", src="vendor/angular/angular.js")
         script(type="text/javascript", src="vendor/angular-route/angular-route.js")
         script(type="text/javascript", src="vendor/angular-resource/angular-resource.js")
+
+        //app
         script(type="text/javascript", src="app/app.js")
         script(type="text/javascript", src="app/main/mainCtrl.js")
+        script(type="text/javascript", src="app/account/signupCtrl.js")
         script(type="text/javascript", src="app/myImages/myImagesCtrl.js")
