--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -18,5 +18,4 @@ html
         //app
         script(type="text/javascript", src="app/app.js")
         script(type="text/javascript", src="app/main/mainCtrl.js")
-        script(type="text/javascript", src="app/account/signupCtrl.js")
-        script(type="text/javascript", src="app/myImages/myImagesCtrl.js")
+        script(type="text/javascript", src="app/img/imgListCtrl.js")
