--- a/public/app/img/imgList.jade
+++ b/public/app/img/imgList.jade
@@ -1,7 +1,10 @@
-div(id="blue" hg-view)
-   .container
-       .row
-           h3 My Images
 div(class="container mtb")
-    .row
+    div(class="row")
+        div(class="col-sm-5 col-md-3" ng-repeat="img in imgs")
+            div(class="thumbnail")
+                a(href="#/img/{{img.code}}")
+                    img(ng-src="/img/{{img.code}}.png", style="pointer:finget;height: 150px; width: 100%; display: block;")
+                div(class="caption")
+                    span {{img.code}}.png - 130kb
+                    p Some text
 
