--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -14,8 +14,10 @@ html
         script(type="text/javascript", src="vendor/angular/angular.js")
         script(type="text/javascript", src="vendor/angular-route/angular-route.js")
         script(type="text/javascript", src="vendor/angular-resource/angular-resource.js")
+        script(type="text/javascript", src="vendor/angular-animate/angular-animate.js")
 
         //app
         script(type="text/javascript", src="app/app.js")
         script(type="text/javascript", src="app/main/mainCtrl.js")
+        script(type="text/javascript", src="app/img/imgCtrl.js")
         script(type="text/javascript", src="app/img/imgListCtrl.js")
