--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -18,6 +18,10 @@ html
 
         //app
         script(type="text/javascript", src="app/app.js")
+        script(type="text/javascript", src="app/common/filters.js")
         script(type="text/javascript", src="app/main/mainCtrl.js")
+        script(type="text/javascript", src="app/img/mvImg.js")
+        script(type="text/javascript", src="app/img/mvCachedImgs.js")
+        script(type="text/javascript", src="app/img/imgCtrl.js")
         script(type="text/javascript", src="app/img/imgCtrl.js")
         script(type="text/javascript", src="app/img/imgListCtrl.js")
