--- a/public/app/img/imgList.jade
+++ b/public/app/img/imgList.jade
@@ -2,9 +2,11 @@ div(id="blue", style="padding-bottom: 15px;margin-bottom: 20px;")
    .container
        .row
            //h3 My Images
-           button(role="button", class="btn btn-success btn-lg" style="margin-left:15px")
+           button(role="button", class="btn btn-success btn-lg" style="margin-left:15px" ng-click="openFileDialog()")
                 span(class="glyphicon glyphicon-upload")
                 | &nbsp Upload Image
+           input(type="file", id="file-upload", file-input="files", multiple, ng-change="startUpload()")
+           li(ng-repeat="file in files") {{file}}
            button(role="button", class="btn btn-warning btn-lg disabled" ng-class="canRemove ? '' : 'disabled'" style="margin-left:15px")
                 span(class="glyphicon glyphicon-remove-circle")
                 | &nbsp Remove
