--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -19,6 +19,7 @@ html
         //app
         script(type="text/javascript", src="app/app.js")
         script(type="text/javascript", src="app/common/filters.js")
+        script(type="text/javascript", src="app/common/directives.js")
         script(type="text/javascript", src="app/main/mainCtrl.js")
         script(type="text/javascript", src="app/img/mvImg.js")
         script(type="text/javascript", src="app/img/mvCachedImgs.js")
