--- a/public/app/img/img.jade
+++ b/public/app/img/img.jade
@@ -1,6 +1,6 @@
 div(class="container mtb")
-    .row(class="text-center")
-        img(ng-src="/img/{{imgCode}}.png")
+    .row(class="text-center", style="min-height:400px")
+        img(ng-src="/image/{{imgCode}}.png")
         br
         br
         span {{imgCode}}.png - 130kb
