--- a/public/app/img/imgList.jade
+++ b/public/app/img/imgList.jade
@@ -2,25 +2,28 @@ div(id="blue", style="padding-bottom: 15px;margin-bottom: 20px;")
    .container
        .row
            //h3 My Images
-           button(role="button", class="btn btn-success btn-lg" style="margin-left:15px" ng-click="openFileDialog()")
-                span(class="glyphicon glyphicon-upload")
-                | &nbsp Upload Image
-           input(type="file", id="file-upload", file-input="files", class="hidden")
-           button(role="button", class="btn btn-warning btn-lg disabled" ng-class="canRemove ? '' : 'disabled'" style="margin-left:15px")
+           button(role="button", class="btn btn-success btn-lg", style="margin-left:15px", ng-click="openFileDialog()", ng-disabled="isUploading")
+                span(class="glyphicon glyphicon-upload" ng-hide="isUploading")
+                | &nbsp {{uploadText}}
+           input(type="file", id="file-upload", file-input="files", class="hidden", multiple)
+           button(role="button", class="btn btn-warning btn-lg disabled", style="margin-left:15px", ng-class="canRemove ? '' : 'disabled'", ng-click="removeSelected()")
                 span(class="glyphicon glyphicon-remove-circle")
                 | &nbsp Remove
-           ul
-                li(ng-repeat="file in files") {{file}}
 div(class="container mtb" style="margin-top: 20px;")
     div(class="row")
-        div(class="col-sm-5 col-md-3" ng-repeat="img in imgs")
+        div(class="col-sm-5 col-md-3 fader-animation" ng-repeat="img in imgs")
             div(class="thumbnail" ng-class="img.selected ? 'thumbnail-selected' : ''")
                 div(style="width:253px;height:200px;margin:0 auto;position:relative")
                     a(href="#/img/{{img.code}}" style="display: table-cell; width: 253px;height:200px;vertical-align:middle")
-                        img(ng-src="/img/thumb/{{img.code}}.png")
+                        img(ng-src="/image/thumb/{{img.code}}.png")
                 div(class="caption")
                     span {{img.code}}.png - {{img.size | bytes}}
                     p Some text
                         button(class="btn pull-right" ng-class="img.selected ? 'btn-info' : 'btn-default'" ng-click="toggleSelect(img)")
                             span(class="glyphicon" ng-class="img.selected ? 'glyphicon-check' : 'glyphicon-unchecked'")
                             | &nbsp {{img.selected ? 'Selected' : 'Select'}}
+    div(class="row", style="min-height:300px", ng-show="imgs.length === 0")
+        div(class="col-lg-8 col-lg-offset-2 centered", style="margin-top:100px")
+            h2 Upload images with "Upload Image" button or with Img2Net desktop application.
+            br
+            div(class="hline")
