--- a/public/app/img/img.jade
+++ b/public/app/img/img.jade
@@ -11,7 +11,7 @@ div(class="container mtb")
             | &nbsp Download Image
         br
         br
-        input(type="text", class="form-control" style="float:none !important; width: 300px; margin: 0 auto;" value="http://localhost:3030/#/img/{{imgCode}}")
+        input(type="text", onClick="this.select();", class="form-control" style="float:none !important; width: 300px; margin: 0 auto;" value="http://localhost:3030/image/{{imgCode}}.png")
         br
         .center-block
             span Share in social networks:
