--- a/public/app/img/imgList.jade
+++ b/public/app/img/imgList.jade
@@ -11,18 +11,34 @@ div(id="blue", style="padding-bottom: 15px;margin-bottom: 20px;")
                 | &nbsp Remove
 div(class="container mtb" style="margin-top: 20px;")
     div(class="row")
-        div(class="col-sm-5 col-md-3 fader-animation" ng-repeat="img in imgs")
-            div(class="thumbnail" ng-class="img.selected ? 'thumbnail-selected' : ''")
-                div(style="width:253px;height:200px;margin:0 auto;position:relative")
-                    a(href="#/img/{{img.code}}" style="display: table-cell; width: 253px;height:200px;vertical-align:middle")
-                        img(ng-src="/image/thumb/{{img.code}}.png")
+        div(class="col-sm-5 col-md-3 fader-animation" ng-repeat="image in images")
+            div(class="thumbnail" ng-class="image.selected ? 'thumbnail-selected' : ''")
+                div(style="width:253px;height:180px;margin:0 auto;position:relative")
+                    a(href="#/img/{{image.code}}" style="display: table-cell; width: 253px;height:200px;vertical-align:middle")
+                        img(ng-src="/image/thumb/{{image.code}}.png")
                 div(class="caption")
-                    span {{img.code}}.png - {{img.size | bytes}}
-                    p Some text
-                        button(class="btn pull-right" ng-class="img.selected ? 'btn-info' : 'btn-default'" ng-click="toggleSelect(img)")
-                            span(class="glyphicon" ng-class="img.selected ? 'glyphicon-check' : 'glyphicon-unchecked'")
-                            | &nbsp {{img.selected ? 'Selected' : 'Select'}}
-    div(class="row", style="min-height:300px", ng-show="imgs.length === 0")
+                    div(class="btn-toolbar", style="margin-left:0px;margin-right:0px;margin-top:5px")
+                        div(class="dropdown dropup btn-group")
+                            em(class='small', style="float: left;margin-top: 6px;") July, 07 - {{image.size | bytes}}
+                        div(class="dropdown dropup btn-group pull-right")
+                            button(class="btn btn-primary dropdown-toggle btn-sm", type="button", id="dropdownMenu1", data-toggle="dropdown")
+                                | Menu &nbsp;
+                                span(class="caret")
+                                span(class="sr-only") Toggle Dropdown
+                            ul(class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1")
+                                li(role="presentation")
+                                    a(role="menuitem" tabindex="-1" href='')
+                                        span(class="glyphicon glyphicon-remove-circle")
+                                        | &nbsp; Remove
+                                li(role="presentation")
+                                    a(role="menuitem" tabindex="-1" href='')
+                                        span(class="glyphicon glyphicon-share")
+                                        | &nbsp; Get embed code
+                                li(role="presentation")
+                                    a(role="menuitem" tabindex="-1" href='')
+                                        span(class="glyphicon glyphicon-link")
+                                        | &nbsp; Copy short link
+    div(class="row", style="min-height:300px", ng-show="images.length === 0")
         div(class="col-lg-8 col-lg-offset-2 centered", style="margin-top:100px")
             h2 Upload images with "Upload Image" button or with Img2Net desktop application.
             br
