--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,11 +53,11 @@ a {
 	padding: 0;
 	margin: 0;
 	text-decoration: none; 
-	-webkit-transition: background-color .4s linear, color .4s linear;
+	/*-webkit-transition: background-color .4s linear, color .4s linear;
 	-moz-transition: background-color .4s linear, color .4s linear;
 	-o-transition: background-color .4s linear, color .4s linear;
 	-ms-transition: background-color .4s linear, color .4s linear;
-	transition: background-color .4s linear, color .4s linear;
+	transition: background-color .4s linear, color .4s linear;*/
 }
 a:hover,
 a:focus {
@@ -119,13 +119,13 @@ a:focus {
 }
 
 .dropdown-menu {
-	background: #384452;
+	/*background: #384452;*/
 }
 
 .dropdown-menu > li > a {
-	color: white;
+	/*color: white;
 	font-weight: 700;
-	font-size: 12px;
+	font-size: 12px;*/
 }
 
 .btn-theme {
