--- a/public/app/img/imgList.jade
+++ b/public/app/img/imgList.jade
@@ -14,10 +14,10 @@ div(class="container mtb" style="margin-top: 20px;")
         div(class="col-sm-5 col-md-3 fader-animation" ng-repeat="image in images")
             div(class="thumbnail" ng-class="image.selected ? 'thumbnail-selected' : ''")
                 span(class="select-image glyphicon", ng-click="toggleSelect(image)", ng-class="image.selected ? 'glyphicon-check' : 'glyphicon-unchecked'")
-                div(style="width:253px;height:180px;margin:0 auto;position:relative")
-                    a(href="#/img/{{image.code}}" style="display: table-cell; width: 253px;height:200px;vertical-align:middle")
+                div(style="width:200px;height:200px;margin:0 auto;position:relative")
+                    a(href="#/img/{{image.code}}" style="display: table-cell; width: 200px;height:200px;vertical-align:middle")
                         img(ng-src="/image/thumb/{{image.code}}.png")
-                div(class="caption")
+                div(class="caption", style="padding: 5px;")
                     div(class="btn-toolbar", style="margin-left:0px;margin-right:0px;margin-top:5px")
                         div(class="dropdown dropup btn-group")
                             em(class='small', style="float: left;margin-top: 6px;") July, 07 - {{image.size | bytes}}
