Fix refactor bugs

--- a/public/app/img/imgList.jade
+++ b/public/app/img/imgList.jade
@@ -16,7 +16,7 @@ div(class="container mtb" style="margin-top: 20px;")
                 span(class="select-image glyphicon", ng-click="toggleSelect(image)", ng-class="image.selected ? 'glyphicon-check' : 'glyphicon-unchecked'")
                 div(style="width:200px;height:200px;margin:0 auto;position:relative")
                     a(href="#/img/{{image.code}}" style="display: table-cell; width: 200px;height:200px;vertical-align:middle")
-                        img(ng-src="/image/thumb/{{image.code}}.png")
+                        img(ng-src="/image/thumb/{{image.code}}.{{image.extension}}")
                 div(class="caption", style="padding: 5px;")
                     div(class="btn-toolbar", style="margin-left:0px;margin-right:0px;margin-top:5px")
                         div(class="dropdown dropup btn-group")
@@ -28,7 +28,7 @@ div(class="container mtb" style="margin-top: 20px;")
                                 span(class="sr-only") Toggle Dropdown
                             ul(class="dropdown-menu" role="menu")
                                 li(role="presentation")
-                                    a(role="menuitem", href="http://localhost:3030/d/{{image.code}}.png", onclick="var that=this;setTimeout(function(){location.href=that.href;}, 200);return false;")
+                                    a(role="menuitem", href="http://localhost:3030/d/{{image.code}}.{{image.extension}}", onclick="var that=this;setTimeout(function(){location.href=that.href;}, 200);return false;")
                                         span(class="glyphicon glyphicon-download")
                                         | &nbsp; Download
                                 li(role="presentation")
