--- a/public/app/img/img.jade
+++ b/public/app/img/img.jade
@@ -1,17 +1,17 @@
 div(class="container mtb")
     .row(class="text-center", style="min-height:400px")
-        img(ng-src="/image/{{imgCode}}.png")
+        img(ng-src="/image/{{image.code}}.{{image.extension}}")
         br
         br
-        span {{imgCode}}.png - 130kb
+        span {{image.code}}.{{image.extension}} - {{image.size | bytes}}
         br
         br
-        a(style="font-size:15px" class="btn btn-lg btn-success" href="http://localhost:3030/d/{{imgCode}}.png" onclick="var that=this;setTimeout(function(){location.href=that.href;}, 200);return false;")
+        a(style="font-size:15px" class="btn btn-lg btn-success" ng-href="http://localhost:3030/d/{{image.code}}.{{image.extension}}" onclick="var that=this;setTimeout(function(){location.href=that.href;}, 200);return false;")
             span(class="glyphicon glyphicon-download-alt")
             | &nbsp Download Image
         br
         br
-        input(type="text", onClick="this.select();", class="form-control" style="float:none !important; width: 300px; margin: 0 auto;" value="http://localhost:3030/image/{{imgCode}}.png")
+        input(type="text", onClick="this.select();", class="form-control" style="float:none !important; width: 300px; margin: 0 auto;" value="http://localhost:3030/image/{{image.code}}.{{image.extension}}")
         br
         .center-block
             span Share in social networks:
