--- a/public/app/img/imgList.jade
+++ b/public/app/img/imgList.jade
@@ -18,27 +18,31 @@ div(class="container mtb" style="margin-top: 20px;")
                     a(href="#/img/{{image.code}}" style="display: table-cell; width: 200px;height:200px;vertical-align:middle")
                         img(ng-src="/image/thumb/{{image.code}}.{{image.extension}}")
                 div(class="caption", style="padding: 5px;")
-                    div(class="btn-toolbar", style="margin-left:0px;margin-right:0px;margin-top:5px")
-                        div(class="dropdown dropup btn-group")
-                            em(class='small', style="float: left;margin-top: 6px;") July, 07 - {{image.size | bytes}}
-                        div(class="dropdown dropup btn-group pull-right")
-                            button(class="btn btn-primary dropdown-toggle btn-sm", type="button", id="dropdownMenu1", data-toggle="dropdown")
-                                | Menu &nbsp;
-                                span(class="caret")
-                                span(class="sr-only") Toggle Dropdown
-                            ul(class="dropdown-menu" role="menu")
-                                li(role="presentation")
-                                    a(role="menuitem", href="http://localhost:3030/d/{{image.code}}.{{image.extension}}", onclick="var that=this;setTimeout(function(){location.href=that.href;}, 200);return false;")
-                                        span(class="glyphicon glyphicon-download")
-                                        | &nbsp; Download
-                                li(role="presentation")
-                                    a(role="menuitem", href="", ng-click="open()")
-                                        span(class="glyphicon glyphicon-share")
-                                        | &nbsp; Get embed code
-                                li(role="presentation")
-                                    a(role="menuitem", href="", ng-click="remove(image)")
-                                        span(class="glyphicon glyphicon-remove-circle")
-                                        | &nbsp; Remove
+                    em(class='small', style="float: left;margin-bottom: 3px;") {{image.date | date: 'MMM, dd'}} - {{image.size | bytes}} (*.{{image.extension}})
+                    div(class="clearfix")
+                    div(class="btn-toolbar", style="margin-left:0px;margin-right:0px;")
+                        div(class="row")
+                            div(class="col-sm-8 col-md-8", style="max-width: 80%;")
+                                input(type="text", class="form-control", style="padding:0;height: 30px;float: left;line-height: 1.6;font-size: 12px; text-align: center;", value="http://i2n.me/{{image.name}}", onClick="this.select();")
+                            div(class="col-sm-4 col-md-4")
+                                div(class="dropdown dropup btn-group pull-right")
+                                    button(class="btn btn-primary dropdown-toggle btn-sm", type="button", id="dropdownMenu1", data-toggle="dropdown")
+                                        | Menu &nbsp;
+                                        span(class="caret")
+                                        span(class="sr-only") Toggle Dropdown
+                                    ul(class="dropdown-menu" role="menu")
+                                        li(role="presentation")
+                                            a(role="menuitem", href="http://localhost:3030/d/{{image.name}}", onclick="var that=this;setTimeout(function(){location.href=that.href;}, 200);return false;")
+                                                span(class="glyphicon glyphicon-download")
+                                                | &nbsp; Download
+                                        li(role="presentation")
+                                            a(role="menuitem", href="", ng-click="showEmbedCodeDialog(image)")
+                                                span(class="glyphicon glyphicon-share")
+                                                | &nbsp; Get embed code
+                                        li(role="presentation")
+                                            a(role="menuitem", href="", ng-click="remove(image)")
+                                                span(class="glyphicon glyphicon-remove-circle")
+                                                | &nbsp; Remove
     div(class="row", style="min-height:300px", ng-show="images.length === 0")
         div(class="col-lg-8 col-lg-offset-2 centered", style="margin-top:100px")
             h2 Upload images with "Upload Image" button or with Img2Net desktop application.
