--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -28,5 +28,5 @@ html
         script(type="text/javascript", src="app/img/mvImg.js")
         script(type="text/javascript", src="app/img/mvCachedImgs.js")
         script(type="text/javascript", src="app/img/imgCtrl.js")
-        script(type="text/javascript", src="app/img/imgCtrl.js")
         script(type="text/javascript", src="app/img/imgListCtrl.js")
+        script(type="text/javascript", src="app/account/signUpCtrl.js")
