--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -14,6 +14,8 @@ block main-content
             div(class="navbar-collapse collapse navbar-right")
                 ul(class="nav navbar-nav")
                     li
+                        a(href="#/account/signup" class="btn btn-theme btn-nav") Sign Up
+                    li
                         a(href="#/img" class="btn btn-theme btn-nav") My Images
     div(ng-view, class="shuffle-animation")
     div(id="footerwrap")
