Fix signup form

--- a/public/app/account/signUp.jade
+++ b/public/app/account/signUp.jade
@@ -1,8 +1,4 @@
-div(id="blue", style="padding-bottom: 15px;margin-bottom: 20px;")
-    .container
-        .row
-
-div(class="container mtb" style="margin-top: 20px;")
+div(class="container mtb")
     .col-md-6.col-md-offset-3
         .well
             h2.text-center Sign Up
@@ -24,7 +20,7 @@ div(class="container mtb" style="margin-top: 20px;")
                     .form-group
                         label.col-md-2.control-label(for="email", style="margin-top: 5px;") Username:
                         .col-md-10
-                            input.form-control.input-lg(name="username", type="text", placeholder="Username", ng-model="email", required)
+                            input.form-control.input-lg(name="username", type="text", placeholder="Username", ng-model="username", required)
                     .form-group
                         label.col-md-2.control-label(for="email", style="margin-top: 5px;") Email:
                         .col-md-10
