--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -28,6 +28,7 @@ html
         script(type="text/javascript", src="app/common/filters.js")
         script(type="text/javascript", src="app/common/directives.js")
         script(type="text/javascript", src="app/main/mainCtrl.js")
+        script(type="text/javascript", src="app/main/navigationCtrl.js")
         script(type="text/javascript", src="app/img/mvImg.js")
         script(type="text/javascript", src="app/img/mvCachedImgs.js")
         script(type="text/javascript", src="app/img/imgCtrl.js")
@@ -36,5 +37,4 @@ html
         script(type="text/javascript", src="app/account/mvAuth.js")
         script(type="text/javascript", src="app/account/mvIdentity.js")
         script(type="text/javascript", src="app/account/mvUser.js")
-        script(type="text/javascript", src="app/account/navbarLoginCtrl.js")
         script(type="text/javascript", src="app/account/signInCtrl.js")
