--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -12,10 +12,7 @@ block main-content
                 a(class="navbar-brand" href="/" style="font-weight: 700;font-size: 24px;") img2net
                     span(style="font-size: 13px;vertical-align: middle;font-weight: normal;margin-left:6px;") - instant image sharing tool
             div(class="navbar-collapse collapse navbar-right")
-                ul(class="nav navbar-nav", ng-include="'partials/account/navbarLogin'")
-                ul(class="nav navbar-nav")
-                    li
-                        a(href="#/img" class="btn btn-theme btn-nav") My Images
+                div(ng-include="'partials/main/navigation'")
     div(ng-view, class="shuffle-animation")
     div(id="footerwrap")
         div(class="container")
