--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -38,3 +38,4 @@ html
         script(type="text/javascript", src="app/account/mvIdentity.js")
         script(type="text/javascript", src="app/account/mvUser.js")
         script(type="text/javascript", src="app/account/signInCtrl.js")
+        script(type="text/javascript", src="app/account/profileCtrl.js")
