--- a/public/app/main/navigation.jade
+++ b/public/app/main/navigation.jade
@@ -1,14 +1,18 @@
 ul(class="nav navbar-nav", ng-controller="navigationCtrl as vm")
     li(ng-hide="vm.isAuthenticated")
-        a(href="#/account/signin" class="btn btn-theme btn-nav") Sign In
+        a(href="#/login" class="btn btn-theme btn-nav") Login
     li(ng-hide="vm.isAuthenticated")
-        a(href="#/account/signup" class="btn btn-theme btn-nav") Sign Up
+        a(href="#/signup" class="btn btn-theme btn-nav") Sign Up
     li.dropdown(style="margin-top: 5px", ng-show="vm.isAuthenticated")
         a.dropdown-toggle(data-toggle="dropdown")
             span(class="glyphicon glyphicon-user")
             | &nbsp; {{ vm.username }}
             b.caret
         ul.dropdown-menu
+            li
+                a(href="/#/profile")
+                    span(class="glyphicon glyphicon-pencil")
+                    | &nbsp; Profile
             li
                 a(href="/#", ng-click="vm.signOut()")
                     span(class="glyphicon glyphicon-off")
